tests/NormalTests/paczka1/fuzzy1/18374554.err
Error in line 1: jnpBqkoDIZ5 S540 32,8
Error in line 5: PAqMdXB4MUq S623 19,4
Error in line 6: jnpBqkoDIZ5 S623 21,0
Error in line 13: PAqMdXB4MUq S823 29,0
Error in line 16: tmwTx9P S623 41,4
Error in line 14: S623 S623 55,2
Error in line 25: tmwTx9P A57 85,0
Error in line 30: tmwTx9P S623 46,8
Error in line 12: qPq S540 5,7
